  ValueMapEditModel, EntityEditModel, setValue(), removeValue(), getValue() and getForeignKeyValue() renamed to put(), remove(), get() and getForeignKey() respectively, now consistent with ValueMap and Entity method names
  DefaultValueMapEditModel, minor refactoring of put() and remove() methods
  Item.item renamed to value
  DefaultValueListProperty.getCaption() and isValid() now iterate the value list instead of instantiating a new Item and using indexOf()
  DatabaseException.statement now transient like errorCode, so it's not available when running as client/server
  EntityApplicationPanel.ApplicationFrameProvider added along with constructor, for customized application frames
  Controls.control() overloaded with command, icon and enabled state
  DefaultDialogExceptionHandler now handles null messages correctly
  SwingEntityComboBoxModel.linkForeignKeyComboBoxModel() improved a bit
  SwingEntityComboBoxModel.linkForeignKeyComboBoxModel() improved a bit more
  DefaultLocalEntityConnection.selectMany() now handles null value as varargs parameter
  DefaultLocalEntityConnection, fetchDepthLimit of -1 is now interpreted as no limit
  FilteredTableModel.AddingStrategy added
  FXEntityListModel.getTableColumn(propertyId) added
  FXEntityListModel.addEntities() now sorts if required
  AbstractFilteredTableModel.addItems() changed to use FilteredTableModel.AddingStrategy
  FilteredTableModel.AddingStrategy removed
  AbstractFilteredTableModel.addItems() and SwingEntityTableModel.addEntities() now with atTop/index and sortAfterAdding parameters
  NavigableImagePanel, minor refactoring
  EntityEditPanelTestUnit refactored and improved somewhat
  DatabaseConnection now extends AutoCloseable
  3d party dependencies upgraded
  SelectionModel.removeSelectedIndex() added, implemented in SwingTableSelectionModel
  SelectionModel added a few methods, implemented in SwingTableSelectionModel and FXEntityListSelectionModel
  AbstractEntityConnectionProvider.onDisconnect() added