@@ -288,12 +288,15 @@ public final class SwingTableSelectionModel<R> extends DefaultListSelectionModel
     singleSelectionState.setActive(getSelectionCount() == 1);
     multipleSelectionState.setActive(!selectionEmptyState.isActive() && !singleSelectionState.isActive());
     final int minSelIndex = getMinSelectionIndex();
-    if (selectedIndex != minSelIndex) {
+    final boolean selectedIndexChanged = selectedIndex != minSelIndex;
+    if (selectedIndexChanged) {
       selectedIndex = minSelIndex;
-      selectedIndexChangedEvent.fire(selectedIndex);
-      selectedItemChangedEvent.fire(getSelectedItem());
     }
     if (!(isAdjusting || isUpdatingSelection)) {
+      if (selectedIndexChanged) {
+        selectedIndexChangedEvent.fire(selectedIndex);
+        selectedItemChangedEvent.fire(getSelectedItem());
+      }
       selectionChangedEvent.fire();
       selectedItemsChangedEvent.fire(getSelectedItems());
     }
