@@ -5056,3 +5056,4 @@
   SelectionModel.removeSelectedIndex() added, implemented in SwingTableSelectionModel
   SelectionModel added a few methods, implemented in SwingTableSelectionModel and FXEntityListSelectionModel
   AbstractEntityConnectionProvider.onDisconnect() added
+  SwingTableSelectionModel.fireValueChanged() bug fixed, selectedIndex and selectedItem events were fired when selection isAdjusting and updatingSelection were true
